-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 12
-
Component/s: hotspot
-
b09
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8212239 | 11.0.2 | Roland Westrelin | P3 | Resolved | Fixed | b02 |
| JDK-8214628 | 8u211 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8212908 | 8u202 | Roland Westrelin | P3 | Resolved | Fixed | b02 |
| JDK-8220881 | emb-8u211 | Roland Westrelin | P3 | Resolved | Fixed | master |
==============================================================================
Unexpected Error
------------------------------------------------------------------------------
Internal Error at coalesce.cpp:298, pid=21640, tid=21651
assert(false) failed: attempted to spill a non-spillable item: 59: testN_mem_reg0, ireg = 13, spill_type: PhiInputSpillCopy
Do you want to debug the problem?
To debug, run 'gdb /proc/21640/exe 21640'; then switch to thread 21651 (0x0000000000005493)
Enter 'yes' to launch gdb automatically (PATH must include gdb)
Otherwise, press RETURN to abort...
=============================================================================
test case is attached. Ran with:
java -XX:-TieredCompilation -XX:-BackgroundCompilation -XX:-UseOnStackReplacement -XX:CompileOnly=SubsumingLoads::test -XX:CompileCommand=quiet -XX:CompileCommand=dontinline,SubsumingLoads::not_inlined -Xmx1024m SubsumingLoads
Unexpected Error
------------------------------------------------------------------------------
Internal Error at coalesce.cpp:298, pid=21640, tid=21651
assert(false) failed: attempted to spill a non-spillable item: 59: testN_mem_reg0, ireg = 13, spill_type: PhiInputSpillCopy
Do you want to debug the problem?
To debug, run 'gdb /proc/21640/exe 21640'; then switch to thread 21651 (0x0000000000005493)
Enter 'yes' to launch gdb automatically (PATH must include gdb)
Otherwise, press RETURN to abort...
=============================================================================
test case is attached. Ran with:
java -XX:-TieredCompilation -XX:-BackgroundCompilation -XX:-UseOnStackReplacement -XX:CompileOnly=SubsumingLoads::test -XX:CompileCommand=quiet -XX:CompileCommand=dontinline,SubsumingLoads::not_inlined -Xmx1024m SubsumingLoads
- backported by
-
JDK-8212239 assert failure in coalesce.cpp: attempted to spill a non-spillable item
-
- Resolved
-
-
JDK-8212908 assert failure in coalesce.cpp: attempted to spill a non-spillable item
-
- Resolved
-
-
JDK-8214628 assert failure in coalesce.cpp: attempted to spill a non-spillable item
-
- Resolved
-
-
JDK-8220881 assert failure in coalesce.cpp: attempted to spill a non-spillable item
-
- Resolved
-
- relates to
-
JDK-8206345 Test8007294.java failed: attempted to spill a non-spillable item
-
- Open
-