8209639: assert failure in coalesce.cpp: attempted to spill a non-spillable item

Reviewed-by: neliasso, kvn